# polkadot-sdk-solochain-template

./: Cargo.toml
pallets/kitties/: Cargo.toml  build.rs  build_ran.txt
pallets/kitties/src/: benchmarking.rs  extrinsics.rs  impls.rs  lib.rs  storage.rs  tests.rs
runtime/: Cargo.toml
